--- a/anatester.html
+++ b/anatester.html
@@ -131,15 +131,14 @@
 <main>
     <section>
         <h2>Player Information</h2>
-        <p><strong>Name:</strong> Team Nike </p>
-        <p><strong>Age:</strong> ? </p>
-        <p><strong>Country:</strong> ? </p>
-        <p><strong>Birthdate:</strong> ? </p>
+            <p><strong>Name:</strong> Roger Federer </p>
+        <p><strong>Country:</strong> Switzerland </p>
+        <p><strong>Birthdate:</strong> 08/08/1981 </p>
         <p><strong>Contact Details:</strong> 071234567</p>
     </section>
 
     <section>
-        <h2>Player Statistics</h2>
+     <h2>Player Statistics</h2>
         <table>
             <tr>
                 <th>Category</th>
@@ -147,15 +146,15 @@
             </tr>
             <tr>
                 <td>Matches won</td>
-                <td>20</td>
+                <td>N</td>
             </tr>
             <tr>
                 <td>Matches lost</td>
-                <td>103</td>
+                <td>N</td>
             </tr>
             <tr>
                 <td>Highest ranking</td>
-                <td>5</td>
+                <td>N</td>
             </tr>
             <!-- Additional empty rows -->
             <tr>
@@ -164,11 +163,11 @@
             </tr>
             <tr>
                 <td>Matches won @ X tourney level</td>
-                <td>m</td>
+                <td>n</td>
             </tr>
             <tr>
                 <td>Matches won @ X tourney level</td>
-                <td>m</td>
+                <td>n</td>
             </tr>
             <tr>
                 <td></td>
